syntax = "proto3";

package tenant.v1;

import "lib/v1/id.proto";

message CreateTenantRequest {
  string name = 1;
  string address = 2;
}

message CreateTenantResponse {
  lib.v1.Ulid id = 1;
}

service TenantService {
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse);
}
